--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.2",
     "html2canvas": "^1.4.1",
     "mp4-muxer": "^5.2.2",
+    "openai": "^6.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
